2009-09-28  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: Added id_group to talert_action, talert_templates and   
	tplanned_downtime to be able to segregate all pandora functions for
	different groups/users. Need to implement in interface code.

 	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Updated migration script 
	for latest SQL changes.

2009-09-28  Sancho Lerena  <slerena@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Postprocess field
	is now bigger.

	* godmode/servers/manage_export_form.php: Export servers was incorrectly
	assigned. Fixed.

2009-09-26  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Update build after last changes.

	* operation/agentes/alerts_status.php, operation/agentes/sla_view.php: 
	Unify titles improving integrity of appearance.

	* operation/search_results.php: Add style to not found message.

2009-09-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js: fix the js and add more entities
	for decode.

2009-09-25  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components.php: change the duplicate
	method and delete method, before it's a form with post and now it's a
	link with get.

2009-09-25  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: add the feature to delete remote
	conf file in the agent configuration.

2009-09-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fix the delete the conf and md5 files of agent
	to delete, before try delete conf and md5 files with name in uppercase.

2009-09-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: add second parameter for trace a log in server
	file (plain text).

2009-09-25  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager.php: add checkbox to multiple delete
	modules in agent managent. And add class style css for disabled modules.